# ruth

./: .env  README  README.md  README.txt  requirements.txt  test_voice_client.py
.github/workflows/: pr-tests.yaml
app/: main.py
app/api/v1/: auth.py  chat.py  notifications.py  stats.py  voice.py
app/core/: config.py  database.py  security.py
app/models/: __init__.py  conversation.py  family.py  health_metric.py  log.py  user.py  user_settings.py  voice_log.py
app/schemas/: chat.py  health.py  user.py  voice.py
app/services/: audio_utils.py  chat_processor.py  emergency_service.py  health_stats.py  llm_client.py  log_service.py  nli_service.py  nlu_service.py  reporting.py  stt_service.py  tts_service.py  visualization.py  voice_pipeline.py
app/static/: script.js  style.css
app/templates/: base.html  chat.html  index.html  login.html  register.html  stats.html
firmware/: CMakeLists.txt  README.md  partitions.csv  sdkconfig.defaults
firmware/main/: CMakeLists.txt  Kconfig.projbuild  app_main.c  audio_io.c  audio_io.h  idf_component.yml  voice_session.c  voice_session.h  wifi_sta.c  wifi_sta.h
migrations/: 002_voice_pipeline.sql
