idf_component_register(
    SRCS
        "app_main.c"
        "wifi_sta.c"
        "audio_io.c"
        "voice_session.c"
    INCLUDE_DIRS
        "."
    REQUIRES
        driver
        esp_wifi
        esp_netif
        esp_event
        nvs_flash
        esp_http_client
        esp-tls
        json
        spi_flash
)
